--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,16 @@
       <artifactId>forge-shell</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>2.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-lang3</artifactId>
+    	<version>3.1</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
